[project]
name = "test-order-producer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Iztok Bajcar", email = "iztok.bajcar@gmail.com" }]
dependencies = ["pika>=1.3.2", "fastapi>=0.115.6", "uvicorn>=0.34.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
api = { cmd = "src/test_order_producer/api.py", env = { "PYTHONPATH" = "src" } }
